modules/vpc/main.tf
# ── VPC ───────────────────────────────────────────────────────────────────────
resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support = true

  tags = merge(local.common_tags,{
    Name = "${local.prefix}-vpc"
  })
}

# ── Internet Gateway ───────────────────────────────────────────────────────────────────────
resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.main.id
    
    tags = merge(local.common_tags,{
        Name = "${local.prefix}-igw"
    })
}
# ── Public Subnets ───────────────────────────────────────────────────────────
resource "aws_subnet" "public" {
  count = length(var.public_subnet_cidrs)

  vpc_id = aws_vpc.main.id
  cidr_block = var.public_subnet_cidrs[count.index]
  availability_zone = var.availability_zones[count.index]
  map_public_ip_on_launch = true

  tags = merge(local.common_tags,{
    Name = "${local.prefix}-public-subnet-${count.index+1}"
    Tier = "Public"
    "kubernetes.io/role/elb" = "1"
  })
}
# ── Private Subnets ───────────────────────────────────────────────────────────
resource "aws_subnet" "private" {
  count = length(var.private_subnet_cidrs)

  vpc_id            = aws_vpc.main.id
  cidr_block        = var.private_subnet_cidrs[count.index]
  availability_zone = var.availability_zones[count.index]

  tags = merge(local.common_tags, {
    Name                              = "${local.prefix}-private-subnet-${count.index + 1}"
    Tier                              = "Private"
    "kubernetes.io/role/internal-elb" = "1"
  })
}
# ── Elastic IP for NAT Gateway ────────────────────────────────────────────────
resource "aws_eip" "nat" {
  domain = "vpc"

  tags = merge(local.common_tags, {
    Name = "${local.prefix}-nat-eip"
  })

  depends_on = [aws_internet_gateway.igw]
}
# ── NAT Gateway ───────────────────────────────────────────────────────────────
resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public[0].id

  tags = merge(local.common_tags, {
    Name = "${local.prefix}-nat-gateway"
  })

  depends_on = [aws_internet_gateway.igw]
}

# ── Public Route Table ────────────────────────────────────────────────────────
resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id
    route = {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }

    tags = merge(local.common_tags, {
    Name = "${local.prefix}-public-rt"
  })
}
# ── Private Route Table ───────────────────────────────────────────────────────
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
  }

  tags = merge(local.common_tags, {
    Name = "${local.prefix}-private-rt"
  })
}

# ── Public Route Table Associations ──────────────────────────────────────────
resource "aws_route_table_association" "public" {
  count          = length(aws_subnet.public)
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

# ── Private Route Table Associations ─────────────────────────────────────────
resource "aws_route_table_association" "private" {
  count          = length(aws_subnet.private)
  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}
